add some information

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <canvas width="640" height="640" v-on:drop.prevent="getFiles" id="theCanvas"></canvas>
     </div>
     <div class="options" id="options">
+        <div class="for-header">
+            <a class="button" href="https://github.com/faace/spritePng" target="_blank">View On GitHub</a>
+        </div>
+
+
+
         <div class="for-size">
             <div class="one-line">
                 picutre size: <input class="size" type="number" placeholder="width" v-model="width" min="1"> *
